@@ -15,7 +15,7 @@ my $cl_name = "mongodbx_queue_" . time;
 my ( $queue, $task, $task2 );
 
 $queue = new_ok( 'MongoDBx::Queue', [ { collection_name => $cl_name } ] );
-$queue->mongo_collection($cl_name)->drop;
+$queue->_mongo_collection($cl_name)->drop;
 
 ok( $queue->add_task( { msg => "Hello World" } ), "added a task" );
 
@@ -93,7 +93,7 @@ ok( $queue->remove_task($task), "removed task" );
 
 is( $queue->size, 0, "size() shows 0" );
 
-$queue->mongo_collection($cl_name)->drop unless $ENV{PERL_MONGODBX_QUEUE_DEBUG};
+$queue->_mongo_collection($cl_name)->drop unless $ENV{PERL_MONGODBX_QUEUE_DEBUG};
 
 done_testing;
 
